<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".QuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id"
            android:text="ID"
            android:textSize="20sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idField"
            android:hint="@string/id_hint"
            android:inputType="numberDecimal"
            android:maxLength="8" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionField"
            android:text="@string/question"
            android:textSize="20sp" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerButton">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/option0"
                android:text="@string/option1"
                android:textSize="16sp"
                android:onClick="optionClicked" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/option1"
                android:text="@string/option2"
                android:textSize="16sp"
                android:onClick="optionClicked" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/option2"
                android:text="@string/option3"
                android:textSize="16sp"
                android:onClick="optionClicked" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/option3"
                android:text="@string/option4"
                android:textSize="16sp"
                android:onClick="optionClicked" />
        </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="nextButtonClicked"
        android:id="@+id/nextButton" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="submitButtonClicked"
        android:id="@+id/submitButton" />

</RelativeLayout>
